# strat-stock-scanner

./: .env.example  .env.test  .gitignore  CLAUDE.md  CLAUDE_WEB_IMPLEMENTATION_BRIEF.md  DEBUGGING_SESSION_SUMMARY.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  README.md  alpaca_client.py  auth_middleware.py  auth_server.py  config.py  mcp_tools.py  pyproject.toml  railway.json  rate_limiter.py  requirements.txt  server.py  strat_detector.py  test_alpaca_direct.py  test_deployment.sh  test_local.py  tools.py
docs/: DEPLOYMENT.md  claude.md
tests/: __init__.py  test_auth.py  test_integration.py  test_rate_limiter.py
