[project]
name = "strat-stock-scanner"
version = "0.1.0"
description = "Mobile stock scanner using STRAT methodology and Alpaca API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.2",
    "mcp>=1.2.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false
